--- a/Analytics Practice Site.html
+++ b/Analytics Practice Site.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Analytics Practice site</title> -->
-<!--GOOGLE TAG
+   <title>Analytics Practice site</title>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5KWD845P7V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5KWD845P7V');
+</script>
 </head>
 <body>
 
-  <h2> Welcome to analytics Practice site</h2>
-  <p> This site is used for Google Analytics Practice.<p>
+  <h2>Welcome to Analytics Practice Site</h2>
+  <p>This site is used for Google Analytics Practice.</p>
 
   <button id="buyBtn">PRESS</button>
 
