--- a/Analytics Practice Site.html
+++ b/Analytics Practice Site.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-   <title>Analytics Practice site</title>
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5KWD845P7V"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <meta charset="UTF-8">
+  <title>Analytics Practice Site</title>
 
-  gtag('config', 'G-5KWD845P7V');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KWD845P7V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5KWD845P7V');
+  </script>
+
 </head>
 <body>
 
@@ -18,6 +21,16 @@
   <p>This site is used for Google Analytics Practice.</p>
 
   <button id="buyBtn">PRESS</button>
+
+  <!-- Optional: Button click tracking -->
+  <script>
+    document.getElementById("buyBtn").addEventListener("click", function () {
+      gtag('event', 'button_click', {
+        event_category: 'engagement',
+        event_label: 'Press Button'
+      });
+    });
+  </script>
 
 </body>
 </html>
